--- a/MainLib/View/EditPersonDataUserControl.xaml
+++ b/MainLib/View/EditPersonDataUserControl.xaml
@@ -105,8 +105,11 @@
         <Label Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Инвалидость</Label>
         <TextBox Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" />
 
-        <Label Grid.Row="17" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Социальный статус</Label>
-        <TextBox Grid.Row="18" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" />
+        <Label Grid.Row="17" Grid.Column="0" FontWeight="Bold">Социальный статус</Label>
+        <ComboBox Grid.Row="17" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch"/>
+
+        <Label Grid.Row="18" Grid.Column="0" FontWeight="Bold">Группа здоровья</Label>
+        <ComboBox Grid.Row="18" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch"/>
 
         <TextBlock Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding TextMessage}"/>
         <StackPanel  Grid.Row="20" Grid.Column="3" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Width="auto">
