--- a/MainLib/View/PersonAddressesView.xaml
+++ b/MainLib/View/PersonAddressesView.xaml
@@ -1,15 +1,4 @@
-﻿<!--Window x:Class="MainLib.PersonAddressesView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:mainLib="clr-namespace:MainLib"
-        xmlns:wpf="http://wpfcontrols.com/"
-        xmlns:core="clr-namespace:Core;assembly=StuffLib"
-        mc:Ignorable="d"
-        Title="Страховые документы" SizeToContent="WidthAndHeight" WindowStartupLocation="Manual" d:DataContext="{d:DesignInstance mainLib:PersonAddressesViewModel}"
-        MinWidth="300" MinHeight="150" DialogResult="{Binding DialogResult}">-->
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:core="clr-namespace:Core;assembly=StuffLib"
                     xmlns:mainLib="clr-namespace:MainLib"
